# lab6

./: Calculator.py  calc.py  calculator.py  main.py  tests.py
calculator/: CMakeLists.txt
project/: CMakeLists.txt
temp/: CMakeLists.txt  main.cpp
